[project]
name = "ComfyUI"
version = "0.12.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic>=1.18.3",
    "av>=14.2.0",
    "comfy-aimdo>=0.1.7",
    "comfy-kitchen>=0.2.7",
    "comfyui-embedded-docs==0.4.0",
    "comfyui-frontend-package==1.37.11",
    "comfyui-workflow-templates==0.8.31",
    "einops>=0.8.2",
    "kornia>=0.7.1",
    "numpy>=1.25.0",
    "pillow>=12.1.0",
    "psutil>=7.2.2",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "safetensors>=0.4.2",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.1",
    "spandrel>=0.4.1",
    "sqlalchemy>=2.0.46",
    "tokenizers>=0.13.3",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchsde>=0.2.6",
    "torchvision>=0.25.0",
    "tqdm>=4.67.2",
    "transformers>=4.50.3",
    "yarl>=1.18.0",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
